SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository and in snapshots and future releases.
===============================================================================================

Enhancements:

#438 The 'Run query output to a file'-feature does now respect the 'Abort on error ...'-property.
  See menu File --> New Session Properties --> tab SQL

#566 Simplified launch scripts by using wildcards to build the classpath.
  This was done for the SQuirreL application and CLI launch scripts.

#438 Run query output to a file by defining the file as part of the SQL statement
  Example:
    @file '/tmp/customers.xlsx' SELECT * FROM customers
  will write the result of 'SELECT * FROM customers' to '/tmp/customers.xlsx'
  The settings for the output will be taken from the 'Store result of SQL to file' dialog.
  Please note the single quotes around the file name.

Allowed Java version 10 in starter scripts.

New right mouse menu entry 'Copy selected rows to new window' available in all tables.
  If windows with with matching column names and column types already exist another pop up menu allows to append
  the selected rows to one of these windows.

#412 Provided Command Line Interface (CLI).
  See Readme.txt in the squirrelcli/ subdirectory of your SQuirreL installation.


Bug fixes:

CSV export --> Corrected line separator. This bug was lately introduced with feature #438.

'Find column'-button now also available when result was moved to own window.

MAC launch scripts: Added double quotes to the definition of the IZPACK_JAVA_HOME variable
  as requested by Pete K. in bug #1321

#1337 Version check dialog told Java 8 was needed for version 3.x instead of 3.8.1

#740 The 'Copy as INSERT-VALUES/UPDATE-SET statement' functions generate 'PressCtrlH' instead of table name.
  This problem is not generally solvable. Improvements were implemented to provide a table name in more occasions.