@@ -30,8 +30,8 @@ syntax.switchingNotSupported=Switching the editor of a runninig session is not s
 syntax.configAutoCorr=Configure auto correct /abreviation
 syntax.enableAutoCorr=Enable auto correct / abreviation
 syntax.autoCorrApply=Apply
-syntax.addRow=Add row
-syntax.removeRows=remove selected rows
+syntax.new=New
+syntax.removeRows=Remove selected rows
 syntax.errAbrev=error / abreviation
 syntax.corExt=correction / extension
 
@@ -44,7 +44,7 @@ syntax.replaceTabsBySpaces=Replace tabs by spaces
 syntax.tabLength=Tab length
 
 syntax.abrevclose=Close
-syntax.abrevNewLineNote=Use \\n in corrections for line break. Note: Bookmarks are more powerful than abreviations.
+syntax.abrevNote=Note: Bookmarks are more powerful than abreviations.
 
 syntax.findOnlyOnRecommendedEditors=Find is not available on all editors. Use the recommended editor.\\nSee menu File --> New Session Properties --> tab Syntax.
 syntax.findSelectedOnlyOnRecommendedEditors=Find selected is not available on all editors. Use the recommended editor.\\nSee menu File --> New Session Properties --> tab Syntax.
